# ds4

./: .dockerignore  .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CUDA_PERF_OPTIMIZATIONS.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.it.md  README.md  bench-ds4.py  build.sh  download_model.sh  ds4-rpc-worker  ds4.c  ds4.h  ds4_agent.c  ds4_bench.c  ds4_cli.c  ds4_cuda.cu  ds4_eval.c  ds4_gpu.h  ds4_hip.cpp  ds4_iq2_tables_hip.inc  ds4_kvstore.c  ds4_kvstore.h  ds4_launch.c  ds4_metal.h  ds4_metal.m  ds4_platform.h  ds4_platform_win.c  ds4_prompt_cache.c  ds4_prompt_cache.h  ds4_rocm.h  ds4_rpc.c  ds4_rpc.h  ds4_rpc_worker.c  ds4_server.c  (+8 more)
bench/: m5_max_128gb_report.md  profile_h200.sh
bench/results/: run1.csv  run2.csv  run3.csv  run4.csv  run5.csv
benchmarks/: streaming_matrix.csv  streaming_matrix.md
cuda/mmq/: VENDOR.md  ds4_ggml_stubs.cu  ds4_ggml_stubs.h  ds4_mmq.cu  ds4_mmq.h
cuda/mmq/test/: test_mmq_parity.cu
dir-steering/: README.md
dir-steering/tools/: build_expert_steering.py  run_sweep_expert.py
docs/cuda-mtp/: README.md
docs/proof-harness/: README.md
metal/: concat.metal  dense.metal  dsv4_kv.metal  dsv4_misc.metal  glu.metal  moe.metal  turbo_quant.metal
misc/: COMPRESSED_KV_CACHE.md
patches/: 0001-Migrate-Linux-GPU-backend-from-CUDA-to-ROCm-HIP-gfx1.patch  0002-Replace-scalar-CPU-fallbacks-with-AMD-GPU-hardware-i.patch  0003-Add-compiled-test-binaries-for-hip-smoke-and-unit-te.patch  0004-Vectorize-F16-F32-GEMV-kernels-and-fix-hipHostRegist.patch  0005-Optimize-ROCm-performance-for-Strix-Halo-memory-coal.patch  0006-Push-to-ds4-rocm-strix-halo.patch  0007-Update-README-with-ROCm-Strix-Halo-build-and-perform.patch  0008-Cleanup-and-final-adjustments-for-ROCm-patch.patch  rocm-strix-halo-full.patch
speed-bench/: m4_macstudio_max_128g.csv  m5_max.csv  m5_max_40_gpu.csv  m5_max_40_gpu_high_power.csv  m5_max_4x_fan.csv  m5_max_fan.csv  macbook_m4_max.csv  plot_mtp_compare.py
speed-bench/mtp-compare-2026-05-14/: README.md  gb10_exact_mtp.csv  gb10_nomtp.csv
tests/: bench_pool_scaling.sh  cuda_long_context_smoke.c  cuda_mtp_proof_matrix.py  ds4_agent_test.c  ds4_proof.py  ds4_test.c  ds4_weight_server_harness_smoke.py  mmq_bench_stats.py  rocm_long_context_smoke  rocm_long_context_smoke.c  run_mmq_bench.sh  test_eviction.sh  test_warmup.sh  verify_turbo_server.sh
tests/proof/: exact-candidate-top2-plan.json  example-argmax-plan.json
tests/test-vectors/: README.md  fetch_official_vectors.py
tools/: ds4_weight_server.cu  metal_smoke.c
